Reorganised documentation.  - this project is now the authoritative source for documentation    (no longer syncing it down from website)  - "rake copy_assets" to copy project files to docs dir  - had to make image URL in boxy.css relative in order for examples to work from filesystem  - unfortunately this means that examples are broken in IE6 when run from filesystem

--- a/docs/stylesheets/boxy.css
+++ b/docs/stylesheets/boxy.css
@@ -12,12 +12,13 @@
 	.boxy-wrapper .bottom-right,
 	.boxy-wrapper .bottom-left { width: 10px; height: 10px; padding: 0 }
 	
-	.boxy-wrapper .top-left { background: url('boxy-nw.png'); }
-	.boxy-wrapper .top-right { background: url('boxy-ne.png'); }
-	.boxy-wrapper .bottom-right { background: url('boxy-se.png'); }
-	.boxy-wrapper .bottom-left { background: url('boxy-sw.png'); }
+	.boxy-wrapper .top-left { background: url('../images/boxy-nw.png'); }
+	.boxy-wrapper .top-right { background: url('../images/boxy-ne.png'); }
+	.boxy-wrapper .bottom-right { background: url('../images/boxy-se.png'); }
+	.boxy-wrapper .bottom-left { background: url('../images/boxy-sw.png'); }
 	
 	/* IE6 hacks for the border */
+	/* Note: you must use absolute paths for each of these images */
 	* html .boxy-wrapper .top-left { background: none; filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/boxy-nw.png'); }
 	* html .boxy-wrapper .top-right { background: none; filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/boxy-ne.png'); }
 	* html .boxy-wrapper .bottom-right { background: none; filter:progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/boxy-se.png'); }
